adding some pages and connecting pages 60% done

--- a/FrontEnd/home_page/homepage.html
+++ b/FrontEnd/home_page/homepage.html
@@ -48,19 +48,19 @@
                     <a href="" class="links">
                         <li id="thirdlist"> Blogs</li>
                     </a>
-                    <a href="" class="links">
+                    <a href="../pages/about.html" class="links">
                         <li id="fourthlist"> About Us</li>
                     </a>
-                    <a href="" class="links">
+                    <a href="../pages/our_tours.html" class="links">
                         <li id="fifthlist"> Our Tours</li>
                     </a>
-                    <a href="" class="links">
+                    <a href="../pages/travelStory.html" class="links">
                         <li id="sixthlist"> Travel Story</li>
                     </a>
-                    <a href="" class="links">
+                    <a href="../pages/contact.html" class="links">
                         <li id="seventhlist"> Contact us</li>
                     </a>
-                    <a href="" class="links">
+                    <a href="../pages/register.html" class="links">
                         <li id="eighthlist"> <button id="button1">Register Now</button></li>
                     </a>
                 </ul>
