some files changing

--- a/FrontEnd/pages/about.html
+++ b/FrontEnd/pages/about.html
@@ -200,10 +200,10 @@
       <nav id="navbar1">
         <ul>
           <li id="firstlist">Travel & Tourism</li>
-          <a href="" class="links">
+          <a href="../home.html" class="links">
             <li id="secondlist">Home</li>
           </a>
-          <a href="" class="links">
+          <a href="../pages/blogs.html" class="links">
             <li id="thirdlist">Blogs</li>
           </a>
           <a href="../pages/about.html" class="links">
@@ -226,7 +226,7 @@
     </div>
     <div class="mainDiv">
       <div class="banner">
-        <img src="./assets/about1.jpg" alt="" />
+        <img src="../assets/img/about1.jpg" alt="" />
       </div>
       <!-- About the area -->
       <div class="aboutArea">
