--- a/FrontEnd/pages/blogDetails.html
+++ b/FrontEnd/pages/blogDetails.html
@@ -200,10 +200,10 @@
       <nav id="navbar1">
         <ul>
           <li id="firstlist">Travel & Tourism</li>
-          <a href="" class="links">
+          <a href="../home.html" class="links">
             <li id="secondlist">Home</li>
           </a>
-          <a href="" class="links">
+          <a href="../pages/blogs.html" class="links">
             <li id="thirdlist">Blogs</li>
           </a>
           <a href="../pages/about.html" class="links">
@@ -227,7 +227,7 @@
     <div class="mainDiv">
       <h1>Blog Details</h1>
       <div class="blogDiv">
-        <img src="./assets/ratargul.jpg" alt="" />
+        <img src="../assets/img/ratargul.jpg" alt="" />
         <h1>Ratar gul swamp forest</h1>
         <p>
           Wednesday, August 24, 2022 | Tag Cloud Tags: Biden, EU, Euro, Europe,
