--- a/FrontEnd/pages/contact.html
+++ b/FrontEnd/pages/contact.html
@@ -230,10 +230,10 @@
       <nav id="navbar1">
         <ul>
           <li id="firstlist">Travel & Tourism</li>
-          <a href="" class="links">
+          <a href="../home.html" class="links">
             <li id="secondlist">Home</li>
           </a>
-          <a href="" class="links">
+          <a href="../pages/blogs.html" class="links">
             <li id="thirdlist">Blogs</li>
           </a>
           <a href="../pages/about.html" class="links">
