--- a/FrontEnd/pages/error.html
+++ b/FrontEnd/pages/error.html
@@ -45,7 +45,7 @@
           height="250"
         />
       </div>
-      <button>Back to home</button>
+      <a href="../home.html"><button>Back to home</button></a>
     </div>
   </body>
 </html>
