--- a/FrontEnd/pages/our_tours.html
+++ b/FrontEnd/pages/our_tours.html
@@ -31,12 +31,12 @@
                 <!-- <div class="brand_name d_flex cus_nav_link cus_link ">
                     <a href="" class="cus_light brand_name_title">Travel & Tourism</a>
                 </div> -->
-                <li class="nav_link_m"><a href="" class="">HOME</a></li>
-                <li class="nav_link_m"><a href="">BLOGS</a></li>
-                <li class="nav_link_m"><a href="">ABOUT US</a></li>
-                <li class="nav_link_m"><a href="">OUR TOURS</a></li>
-                <li class="nav_link_m"><a href="">TRAVEL STORY</a></li>
-                <li class="nav_link_m"><a href="">CONTACT US</a></li>
+                <li class="nav_link_m"><a href="../home.html" class="">HOME</a></li>
+                <li class="nav_link_m"><a href="../pages/blogs.html">BLOGS</a></li>
+                <li class="nav_link_m"><a href="../pages/about.html">ABOUT US</a></li>
+                <li class="nav_link_m"><a href="../pages/our_tours.html">OUR TOURS</a></li>
+                <li class="nav_link_m"><a href="../pages/travelStory.html">TRAVEL STORY</a></li>
+                <li class="nav_link_m"><a href="../pages/contact.html">CONTACT US</a></li>
                 <li class="">
                     <div class="register_nav_btn">
                        <a href=""> <button class="register_btn" type="submit">Register Now</button></a>
