--- a/FrontEnd/pages/travelStory.html
+++ b/FrontEnd/pages/travelStory.html
@@ -221,10 +221,10 @@
       <nav id="navbar1">
         <ul>
           <li id="firstlist">Travel & Tourism</li>
-          <a href="" class="links">
+          <a href="../home.html" class="links">
             <li id="secondlist">Home</li>
           </a>
-          <a href="" class="links">
+          <a href="../pages/blogs.html" class="links">
             <li id="thirdlist">Blogs</li>
           </a>
           <a href="../pages/about.html" class="links">
@@ -247,7 +247,7 @@
     </div>
     <div class="mainDiv">
       <div class="banner">
-        <img src="./assets/TravelStory3.jpg" alt="" />
+        <img src="../assets/img/TravelStory3.jpg" alt="" />
       </div>
       <div class="storyDiv">
         <div class="heading">
@@ -258,11 +258,11 @@
           </p>
         </div>
         <div class="imgAlbum">
-          <img src="./assets/TravelStory2.jpg" alt="" class="firstImg" /><img
-            src="./assets/TravelStory1.jpg"
+          <img src="../assets/img/TravelStory2.jpg" alt="" class="firstImg" /><img
+            src="../assets/img/TravelStory1.jpg"
             alt=""
-          /><img src="./assets/TravelStory5.jpg" alt="" /><img
-            src="./assets/TravelStory6.jpg"
+          /><img src="../assets/img/TravelStory5.jpg" alt="" /><img
+            src="../assets/img/TravelStory6.jpg"
             alt=""
             class="lastImg"
           />
