--- a/FrontEnd/pages/blogs.html
+++ b/FrontEnd/pages/blogs.html
@@ -19,12 +19,12 @@
                 <a href="" class="cus_light brand_name_title">Travel & Tourism</a>
             </div>
             <ul class="cus_nav_link nav_ul_font_size m_auto ">
-                <li class="nav_link_m"><a href="" class="">HOME</a></li>
-                <li class="nav_link_m"><a href="">BLOGS</a></li>
-                <li class="nav_link_m"><a href="">ABOUT US</a></li>
-                <li class="nav_link_m"><a href="">OUR TOURS</a></li>
-                <li class="nav_link_m"><a href="">TRAVEL STORY</a></li>
-                <li class="nav_link_m"><a href="">CONTACT US</a></li>
+                <li class="nav_link_m"><a href="../home.html" class="">HOME</a></li>
+                <li class="nav_link_m"><a href="../pages/blogs.html">BLOGS</a></li>
+                <li class="nav_link_m"><a href="../pages/about.html">ABOUT US</a></li>
+                <li class="nav_link_m"><a href="../pages/our_tours.html">OUR TOURS</a></li>
+                <li class="nav_link_m"><a href="../pages/travelStory.html">TRAVEL STORY</a></li>
+                <li class="nav_link_m"><a href="../pages/contact.html">CONTACT US</a></li>
                 <li class="">
                     <div class="register_nav_btn">
                         <a href=""><button class="register_btn" type="submit">Register Now</button></a>
