--- a/FrontEnd/home.html
+++ b/FrontEnd/home.html
@@ -30,16 +30,16 @@
     <div class="slider">
       <div class="list">
         <div class="item">
-          <img src="./assets/img/boat1.png" alt="" />
+          <img src="./assets/img/homebanner1.jpg" alt="" />
         </div>
         <div class="item">
-          <img src="./assets/img/boat2.png" alt="" />
+          <img src="./assets/img/homebanner2.jpg" alt="" />
         </div>
         <div class="item">
-          <img src="./assets/img/boat3.png" alt="" />
+          <img src="./assets/img/homebanner3.jpg" alt="" />
         </div>
         <div class="item">
-          <img src="./assets/img/boat4.png" alt="" />
+          <img src="./assets/img/homebanner4.jpg" alt="" />
         </div>
       </div>
       <div id="navbar">
@@ -94,7 +94,7 @@
 
     <h1 id="popularheading">Popular Places</h1>
     <p class="popularplaceline">
-      Fickle Flight is your one-stop travel portal. We offer hassle free
+      Experience Bangladesh's river magic: trade routes, local life, and untouched nature blend into cherished memories.
     </p>
     <p class="popularplaceline">flight and hotel bookings.</p>
 
@@ -123,7 +123,7 @@
                 <a class="cardlink" href=""
                   ><img
                     class="cardimage"
-                    src="./assets/img/Sadarghat.jpg"
+                    src="./assets/img/sadarghat.jpg"
                     alt=""
                 /></a>
                 <a class="cardlink" href=""
@@ -137,7 +137,7 @@
                 <a class="cardlink" href=""
                   ><img
                     class="cardimage"
-                    src="./assets/img/Floating Market.jpg"
+                    src="./assets/img/floatingMarket.jpg"
                     alt=""
                 /></a>
                 <a class="cardlink" href=""
@@ -149,7 +149,7 @@
               </div>
               <div class="carddiv1">
                 <a class="cardlink" href=""
-                  ><img class="cardimage" src="./assets/img/Patenga.jpg" alt=""
+                  ><img class="cardimage" src="./assets/img/padmaRiver.jpg" alt=""
                 /></a>
                 <a class="cardlink" href=""
                   ><h5 class="cardheading">Padma River</h5></a
@@ -160,7 +160,7 @@
               </div>
               <div class="carddiv1">
                 <a class="cardlink" href=""
-                  ><img class="cardimage" src="./assets/img/Mermaid.jpg" alt=""
+                  ><img class="cardimage" src="./assets/img/brahmaputraRiver.jpg" alt=""
                 /></a>
                 <a class="cardlink" href=""
                   ><h5 class="cardheading">Brahmaputra River</h5></a
@@ -171,7 +171,7 @@
               </div>
               <div class="carddiv1">
                 <a class="cardlink" href=""
-                  ><img class="cardimage" src="./assets/img/Tanguar.jpg" alt=""
+                  ><img class="cardimage" src="./assets/img/meghna.jpg" alt=""
                 /></a>
                 <a class="cardlink" href=""
                   ><h5 class="cardheading">Meghna</h5></a
@@ -184,7 +184,7 @@
                 <a class="cardlink" href=""
                   ><img
                     class="cardimage"
-                    src="./assets/img/Ratargul.jpg"
+                    src="./assets/img/kaptiLake.jpg"
                     alt=""
                 /></a>
                 <a class="cardlink" href=""
@@ -217,7 +217,7 @@
                 <a class="cardlink" href=""
                   ><img
                     class="cardimage"
-                    src="./assets/img/Sadarghat.jpg"
+                    src="./assets/img/sadarghat.jpg"
                     alt=""
                 /></a>
                 <a class="cardlink" href=""
@@ -231,7 +231,7 @@
                 <a class="cardlink" href=""
                   ><img
                     class="cardimage"
-                    src="./assets/img/Floating Market.jpg"
+                    src="./assets/img/floatingMarket.jpg"
                     alt=""
                 /></a>
                 <a class="cardlink" href=""
@@ -243,7 +243,7 @@
               </div>
               <div class="carddiv1">
                 <a class="cardlink" href=""
-                  ><img class="cardimage" src="./assets/img/Patenga.jpg" alt=""
+                  ><img class="cardimage" src="./assets/img/padmaRiver.jpg" alt=""
                 /></a>
                 <a class="cardlink" href=""
                   ><h5 class="cardheading">Padma River</h5></a
@@ -254,7 +254,7 @@
               </div>
               <div class="carddiv1">
                 <a class="cardlink" href=""
-                  ><img class="cardimage" src="./assets/img/Mermaid.jpg" alt=""
+                  ><img class="cardimage" src="./assets/img/brahmaputraRiver.jpg" alt=""
                 /></a>
                 <a class="cardlink" href=""
                   ><h5 class="cardheading">Brahmaputra River</h5></a
@@ -265,7 +265,7 @@
               </div>
               <div class="carddiv1">
                 <a class="cardlink" href=""
-                  ><img class="cardimage" src="./assets/img/Tanguar.jpg" alt=""
+                  ><img class="cardimage" src="./assets/img/meghna.jpg" alt=""
                 /></a>
                 <a class="cardlink" href=""
                   ><h5 class="cardheading">Meghna</h5></a
@@ -278,7 +278,7 @@
                 <a class="cardlink" href=""
                   ><img
                     class="cardimage"
-                    src="./assets/img/Ratargul.jpg"
+                    src="./assets/img/kaptiLake.jpg"
                     alt=""
                 /></a>
                 <a class="cardlink" href=""
@@ -311,7 +311,7 @@
                 <a class="cardlink" href=""
                   ><img
                     class="cardimage"
-                    src="./assets/img/Sadarghat.jpg"
+                    src="./assets/img/sadarghat.jpg"
                     alt=""
                 /></a>
                 <a class="cardlink" href=""
@@ -325,7 +325,7 @@
                 <a class="cardlink" href=""
                   ><img
                     class="cardimage"
-                    src="./assets/img/Floating Market.jpg"
+                    src="./assets/img/floatingMarket.jpg"
                     alt=""
                 /></a>
                 <a class="cardlink" href=""
@@ -337,7 +337,7 @@
               </div>
               <div class="carddiv1">
                 <a class="cardlink" href=""
-                  ><img class="cardimage" src="./assets/img/Patenga.jpg" alt=""
+                  ><img class="cardimage" src="./assets/img/padmaRiver.jpg" alt=""
                 /></a>
                 <a class="cardlink" href=""
                   ><h5 class="cardheading">Padma River</h5></a
@@ -348,7 +348,7 @@
               </div>
               <div class="carddiv1">
                 <a class="cardlink" href=""
-                  ><img class="cardimage" src="./assets/img/Mermaid.jpg" alt=""
+                  ><img class="cardimage" src="./assets/img/brahmaputraRiver.jpg" alt=""
                 /></a>
                 <a class="cardlink" href=""
                   ><h5 class="cardheading">Brahmaputra River</h5></a
@@ -359,7 +359,7 @@
               </div>
               <div class="carddiv1">
                 <a class="cardlink" href=""
-                  ><img class="cardimage" src="./assets/img/Tanguar.jpg" alt=""
+                  ><img class="cardimage" src="./assets/img/meghna.jpg" alt=""
                 /></a>
                 <a class="cardlink" href=""
                   ><h5 class="cardheading">Meghna</h5></a
@@ -372,7 +372,7 @@
                 <a class="cardlink" href=""
                   ><img
                     class="cardimage"
-                    src="./assets/img/Ratargul.jpg"
+                    src="./assets/img/kaptiLake.jpg"
                     alt=""
                 /></a>
                 <a class="cardlink" href=""
