--- a/FrontEnd/pages/about.html
+++ b/FrontEnd/pages/about.html
@@ -229,7 +229,7 @@
     </div>
     <div class="mainDiv">
       <div class="banner">
-        <img src="../assets/img/about1.jpg" alt="" />
+        <img src="../assets/img/aboutus.jpg" alt="" />
       </div>
       <!-- About the area -->
       <div class="aboutArea">
