--- a/FrontEnd/pages/our_tours.html
+++ b/FrontEnd/pages/our_tours.html
@@ -79,7 +79,7 @@
                         <div class="col-4 cus_mb_5">
                           <div class="card">
                             <div class="card_img">
-                              <img src="../assets/img/img1.png" alt="" />
+                              <img src="../assets/img/sadarghat.jpg" alt="" />
                             </div>
                             <div
                               class="card_contents cus_dark cus_mt_5 cus_mb_5 cus_ms_5"
@@ -93,7 +93,7 @@
                         <div class="col-4 cus_mb_5">
                           <div class="card">
                             <div class="card_img">
-                              <img src="../assets/img/img2.png" alt="" />
+                              <img src="../assets/img/padmaRiver.jpg" alt="" />
                             </div>
                             <div
                               class="card_contents cus_dark cus_mt_5 cus_mb_5 cus_ms_5"
@@ -107,7 +107,7 @@
                         <div class="col-4 cus_mb_5">
                           <div class="card">
                             <div class="card_img">
-                              <img src="../assets/img/img3.png" alt="" />
+                              <img src="../assets/img/brahmaputraRiver.jpg" alt="" />
                             </div>
                             <div
                               class="card_contents cus_dark cus_mt_5 cus_mb_5 cus_ms_5"
@@ -122,8 +122,8 @@
                         <div class="col-4 cus_mb_5">
                           <div class="card">
                             <div class="card_img">
-                              <!-- <img src="./assets/img/img4.png" alt=""> -->
-                              <img src="../assets/img/img4.png" alt="" />
+                              <!-- <img src="./assets/img/floatingMarket.jpg" alt=""> -->
+                              <img src="../assets/img/floatingMarket.jpg" alt="" />
                             </div>
                             <div
                               class="card_contents cus_dark cus_mt_5 cus_mb_5 cus_ms_5"
@@ -137,7 +137,7 @@
                         <div class="col-4 cus_mb_5">
                           <div class="card">
                             <div class="card_img">
-                              <img src="../assets/img/img5.png" alt="" />
+                              <img src="../assets/img/meghna.jpg" alt="" />
                             </div>
                             <div
                               class="card_contents cus_dark cus_mt_5 cus_mb_5 cus_ms_5"
@@ -151,12 +151,12 @@
                         <div class="col-4 cus_mb_5">
                           <div class="card">
                             <div class="card_img">
-                              <img src="../assets/img/img6.png" alt="" />
+                              <img src="../assets/img/kaptiLake.jpg" alt="" />
                             </div>
                             <div
                               class="card_contents cus_dark cus_mt_5 cus_mb_5 cus_ms_5"
                             >
-                              <h2>Rarargul Swamp</h2>
+                              <h2>Kapti Lake</h2>
                               <p class="cus_mt_5">Rangamati, Bangladesh</p>
                             </div>
                           </div>
@@ -176,7 +176,7 @@
                         <div class="col-4 cus_mb_5">
                           <div class="card">
                             <div class="card_img">
-                              <img src="../assets/img/img1.png" alt="" />
+                              <img src="../assets/img/sadarghat.jpg" alt="" />
                             </div>
                             <div
                               class="card_contents cus_dark cus_mt_5 cus_mb_5 cus_ms_5"
@@ -190,7 +190,7 @@
                         <div class="col-4 cus_mb_5">
                           <div class="card">
                             <div class="card_img">
-                              <img src="../assets/img/img2.png" alt="" />
+                              <img src="../assets/img/padmaRiver.jpg" alt="" />
                             </div>
                             <div
                               class="card_contents cus_dark cus_mt_5 cus_mb_5 cus_ms_5"
@@ -204,7 +204,7 @@
                         <div class="col-4 cus_mb_5">
                           <div class="card">
                             <div class="card_img">
-                              <img src="../assets/img/img3.png" alt="" />
+                              <img src="../assets/img/brahmaputraRiver.jpg" alt="" />
                             </div>
                             <div
                               class="card_contents cus_dark cus_mt_5 cus_mb_5 cus_ms_5"
@@ -219,7 +219,7 @@
                         <div class="col-4 cus_mb_5">
                           <div class="card">
                             <div class="card_img">
-                              <img src="../assets/img/img4.png" alt="" />
+                              <img src="../assets/img/floatingMarket.jpg" alt="" />
                             </div>
                             <div
                               class="card_contents cus_dark cus_mt_5 cus_mb_5 cus_ms_5"
@@ -233,7 +233,7 @@
                         <div class="col-4 cus_mb_5">
                           <div class="card">
                             <div class="card_img">
-                              <img src="../assets/img/img5.png" alt="" />
+                              <img src="../assets/img/meghna.jpg" alt="" />
                             </div>
                             <div
                               class="card_contents cus_dark cus_mt_5 cus_mb_5 cus_ms_5"
@@ -247,12 +247,12 @@
                         <div class="col-4 cus_mb_5">
                           <div class="card">
                             <div class="card_img">
-                              <img src="../assets/img/img6.png" alt="" />
+                              <img src="../assets/img/kaptiLake.jpg" alt="" />
                             </div>
                             <div
                               class="card_contents cus_dark cus_mt_5 cus_mb_5 cus_ms_5"
                             >
-                              <h2>Rarargul Swamp</h2>
+                              <h2>Kapti Lake</h2>
                               <p class="cus_mt_5">Dhaka, Bangladesh</p>
                             </div>
                           </div>
@@ -273,7 +273,7 @@
                         <div class="col-4 cus_mb_5">
                           <div class="card">
                             <div class="card_img">
-                              <img src="../assets/img/img1.png" alt="" />
+                              <img src="../assets/img/sadarghat.jpg" alt="" />
                             </div>
                             <div
                               class="card_contents cus_dark cus_mt_5 cus_mb_5 cus_ms_5"
@@ -287,7 +287,7 @@
                         <div class="col-4 cus_mb_5">
                           <div class="card">
                             <div class="card_img">
-                              <img src="../assets/img/img2.png" alt="" />
+                              <img src="../assets/img/padmaRiver.jpg" alt="" />
                             </div>
                             <div
                               class="card_contents cus_dark cus_mt_5 cus_mb_5 cus_ms_5"
@@ -301,7 +301,7 @@
                         <div class="col-4 cus_mb_5">
                           <div class="card">
                             <div class="card_img">
-                              <img src="../assets/img/img3.png" alt="" />
+                              <img src="../assets/img/brahmaputraRiver.jpg" alt="" />
                             </div>
                             <div
                               class="card_contents cus_dark cus_mt_5 cus_mb_5 cus_ms_5"
@@ -316,7 +316,7 @@
                         <div class="col-4 cus_mb_5">
                           <div class="card">
                             <div class="card_img">
-                              <img src="../assets/img/img4.png" alt="" />
+                              <img src="../assets/img/floatingMarket.jpg" alt="" />
                             </div>
                             <div
                               class="card_contents cus_dark cus_mt_5 cus_mb_5 cus_ms_5"
@@ -330,7 +330,7 @@
                         <div class="col-4 cus_mb_5">
                           <div class="card">
                             <div class="card_img">
-                              <img src="../assets/img/img5.png" alt="" />
+                              <img src="../assets/img/meghna.jpg" alt="" />
                             </div>
                             <div
                               class="card_contents cus_dark cus_mt_5 cus_mb_5 cus_ms_5"
@@ -344,12 +344,12 @@
                         <div class="col-4 cus_mb_5">
                           <div class="card">
                             <div class="card_img">
-                              <img src="../assets/img/img6.png" alt="" />
+                              <img src="../assets/img/kaptiLake.jpg" alt="" />
                             </div>
                             <div
                               class="card_contents cus_dark cus_mt_5 cus_mb_5 cus_ms_5"
                             >
-                              <h2>Rarargul Swamp</h2>
+                              <h2>Kapti Lake</h2>
                               <p class="cus_mt_5">Dhaka, Bangladesh</p>
                             </div>
                           </div>
