--- a/FrontEnd/pages/travelStory.html
+++ b/FrontEnd/pages/travelStory.html
@@ -247,22 +247,21 @@
     </div>
     <div class="mainDiv">
       <div class="banner">
-        <img src="../assets/img/TravelStory3.jpg" alt="" />
+        <img src="../assets/img/bannerofts.jpg" alt="" />
       </div>
       <div class="storyDiv">
         <div class="heading">
           <h1>Travel Story</h1>
           <p>
-            Fickle Flight is your one-stop travel portal. We offer hassle free
-            flight and hotel bookings.
+            Welcome to Bangladesh: Where Hospitality Meets History and Nature's Bounty.
           </p>
         </div>
         <div class="imgAlbum">
-          <img src="../assets/img/TravelStory2.jpg" alt="" class="firstImg" /><img
-            src="../assets/img/TravelStory1.jpg"
+          <img src="../assets/img/TravelStory1.jpg" alt="" class="firstImg" /><img
+            src="../assets/img/TravelStory2.jpg"
             alt=""
-          /><img src="../assets/img/TravelStory5.jpg" alt="" /><img
-            src="../assets/img/TravelStory6.jpg"
+          /><img src="../assets/img/TravelStory3.jpg" alt="" /><img
+            src="../assets/img/TravelStory4.jpg"
             alt=""
             class="lastImg"
           />
